crates/vouched/tests/ui/vouched/impls_try_from_borrowed_str_borrowed_inner.rs
use vouched::Vouched;

#[derive(Vouched)]
#[vouched(len(1..=8), impls(try_from(&str)))]
struct BorrowedInner<'a>(&'a str);

fn main() {}
